Deflate examples, cut acknowledgments

--- a/CSAcknowledgments.tex
+++ b/CSAcknowledgments.tex
@@ -1,2 +1,2 @@
-\section*{Acknowledgment}
-The authors would like to thank\ldots
+%\section*{Acknowledgment}
+%The authors would like to thank\ldots
