--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -4,7 +4,8 @@ One major hurdle in developing robust applications is getting them to run reliab
 which they may be installed.  In an increasingly diverse software ecosystem it is not uncommon for problematic
 differences to appear between these environments.  Whether it happens because of a lack of adherence to standards or
 developer error, the result is the same: software written to run in multiple environments falls victim to the
-differences between those environments.  These can easily go unnoticed due to the infeasibility of testing software
+differences between those environments.  These errors can easily go unnoticed 
+during system testing due to the infeasibility of testing software
 across every combination of hardware and system software on which it is expected to run.  Manually testing an application in
 all production environments is impossible in practice. Developers are often unaware of particular types of environment
 anomalies, leaving their applications riddled with environment-dependent bugs that are only detected \emph{after
@@ -22,18 +23,19 @@ without having to actually run it there.  This work introduces an an approach to
 We introduce {\em CrashSimulator}, a testing approach based on the following observation:
 {\em Insight gleaned from a fault that is caused by unexpected interactions 
 of {\em one application} with one of its deployment environments, can be leveraged 
-to discover related faults in a {\em wide range} of loosely related applications that may run in that environment.}
+to discover related faults in a {\em wide range} of applications that may run in that environment.}
 The approach is loosely inspired by simulation environments used in the automotive industry. Discovery
 that one model of car is prone to behave poorly under certain environmental conditions (e.g. side impact collision,
 roll over, etc) leads to testing many other car models in simulators that model relevant aspects of the environment.
 
-\paragraph{What is an ``Environment''}
+%\paragraph{What is an ``Environment''}
 
 An application's environment is the collection of all resources external to the application with which the
-application communicates.  These external resources can be thought of as an implicit input to the program as their
-presence and contents alter the flow of any application executed in their presence. CrashSimulator is concerned with
-bugs that arise from subtle differences in behavior between executions in one environment versus another
-specifically, the files and network communications visible through the monitoring the system calls the application
+application communicates.  These external resources can be thought of as a implicit inputs to the program as their
+presence and contents can affect the flow of any application executed in their presence. CrashSimulator is concerned with
+bugs that arise from subtle differences in behavior between executions in one environment versus another,
+such as the files and network communications visible 
+to the application through the system calls the application
 makes during the course of its execution.
 
 Software applications interact with their environments by making requests in the form of system calls and receiving
@@ -128,13 +130,12 @@ constructed in such a way that it handles the challenges of the target environme
 To illustrate CrashSimulator's operation, consider applications that
 at some point ``move'' a file from a source filename to a destination filename.
 Here, the relevant aspect of the environment is the state of the filesystem.
-In many environments, it is sufficent for the application to simply call the {\tt rename()} system call, and having tested
+In many environments, it is sufficent for the application to simply call the {\tt rename()} system call, so having tested
 the application only in such environments, developers might erroneously conclude that the application handles the ``move'' correctly.
 However, there are many situations (environments) in which this is not sufficient, including environments involving symbolic links to files,
 cross-device moves, and/or special files.
 In this paper, we will illustrate CrashSimulator's operation on an example in which a special file is being moved to a different device.
-This handled incorrectly by several widely used applications. Other similar anomalies that CrashSimulator can detect
-are discussed in section IV.
+This handled incorrectly by several widely used applications. Other similar anomalies that CrashSimulator can detect are discussed in section~ref{sec:evaluation}.
 
 After discovering that some application $A$ fails in an environment where it tries to move a special file (such as /dev/urandom) across
 devices, crash simulator can test other applications $A'$ as follows:
@@ -155,10 +156,12 @@ devices, crash simulator can test other applications $A'$ as follows:
                 appears to be making an effort to respond to the anomaly).
 \end{enumerate}
 
-Overall, each of CrashSimulator's test patterns consists of rules for perturbing traces to give the application the
-illusion that it is executing in an anomolous environment and a checker to determine whether the application attempts to
-respond.  Once developed, these test patterns can be applied to many traces from many applications that may be prone to mishandling the environmental anomaly in question.
+Overall, each of CrashSimulator's test patterns consists of rules for mutating traces to give the application the
+illusion that it is executing in an anomolous environment and a checker 
+that attempts to determine whether the responds appropriately to the anomaly.
+Once developed, these test patterns can be applied to many traces from many applications that may be prone to mishandling the environmental anomaly in question.
 In the remainder of this paper we desribe CrashSimulator's operation more generally and in more detail.
+\phyllis{Replace hard-coded section numbers with refs and add labels to each section}
 Manipulation and replay of traces (section III),
 Models for checking behavior in simulated environment (section III)
 Evaluation (section IV)
